--- a/jacks-digital-garden.html
+++ b/jacks-digital-garden.html
@@ -247,6 +247,14 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
+<li>$:/GitHub/Branch</li>
+
+<li>$:/GitHub/Filename</li>
+
+<li>$:/GitHub/Repo</li>
+
+<li>$:/GitHub/Username</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/language/Buttons/NewHere/Hint</li>
@@ -286,6 +294,12 @@ Error message and password prompt
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/tab-1749438307</li>
+
+<li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -10880,6 +10894,18 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div bag="default" created="20200106211749103" modified="20210925042022121" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
+<div created="20210925054113714" modified="20210925054114009" title="$:/GitHub/Branch">
+<pre>main</pre>
+</div>
+<div created="20210925054138275" modified="20210925054138275" title="$:/GitHub/Filename">
+<pre>jacks-digital-garden.html</pre>
+</div>
+<div created="20210925054054651" modified="20210925054102977" title="$:/GitHub/Repo">
+<pre>jackkytan/jackkytan.github.io</pre>
+</div>
+<div created="20210925054003546" modified="20210925054004418" title="$:/GitHub/Username">
+<pre>jackkytan</pre>
+</div>
 <div bag="default" revision="0" title="$:/isEncrypted">
 <pre>no</pre>
 </div>
@@ -12687,6 +12713,15 @@ exports.context = contextWidget;
 <div bag="default" created="20200414222832782" modified="20210925041657149" revision="0" title="$:/SiteTitle" type="text/vnd.tiddlywiki">
 <pre>Jack Ky Tan</pre>
 </div>
+<div created="20210925053955633" modified="20210925053957506" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
+</div>
+<div created="20210925054000298" modified="20210925054000298" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+</div>
+<div created="20210925053948018" modified="20210925053948018" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
 <div bag="default" revision="1" title="$:/status/IsAnonymous">
 <pre>yes</pre>
 </div>
@@ -12702,7 +12737,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Note 3]] [[Note 2]] [[Note 1]]" title="$:/StoryList">
+<div created="20210925053950756" list="" modified="20210925054143417" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
