Saved by TiddlyWiki

--- a/jacks-digital-garden.html
+++ b/jacks-digital-garden.html
@@ -343,6 +343,8 @@ Error message and password prompt
 
 <li>Note 3</li>
 
+<li>Note 4</li>
+
 </ul>
 </p>
 
@@ -12737,7 +12739,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210925053950756" list="" modified="20210925054143417" title="$:/StoryList">
+<div created="20210925053950756" list="[[Note 4]]" modified="20210925054143417" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -12903,6 +12905,9 @@ See the [[control panel|$:/ControlPanel]] for more options.
 <pre>[[Note 1]] [[Note 3]]</pre>
 </div>
 <div created="20210925042314416" modified="20210925042318741" tags="" title="Note 3">
+<pre></pre>
+</div>
+<div created="20210925054204134" modified="20210925054208969" tags="" title="Note 4">
 <pre></pre>
 </div>
 
