Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -247,6 +247,12 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
+<li>$:/GitHub/Filename</li>
+
+<li>$:/GitHub/Repo</li>
+
+<li>$:/GitHub/Username</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/language/Buttons/NewHere/Hint</li>
@@ -287,6 +293,12 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/image-picker/system-369504366</li>
+
+<li>$:/state/tab-1749438307</li>
+
+<li>$:/state/tab-2065006209</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -320,6 +332,8 @@ Error message and password prompt
 <li>$:/view</li>
 
 <li>GettingStarted</li>
+
+<li>Hello</li>
 
 <li>New Tiddler</li>
 
@@ -10877,8 +10891,17 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 &lt;/$reveal&gt;
 &lt;/div&gt;</pre>
 </div>
-<div bag="default" created="20200106211749103" modified="20210925042022121" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
-<pre></pre>
+<div bag="default" created="20200106211749103" modified="20210925060455512" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
+<pre>[[Hello]]</pre>
+</div>
+<div created="20210925061601860" modified="20210925061604547" title="$:/GitHub/Filename">
+<pre>index.html</pre>
+</div>
+<div created="20210925061614867" modified="20210925061620723" title="$:/GitHub/Repo">
+<pre>jackkytan/jackkytan.github.io</pre>
+</div>
+<div created="20210925061610891" modified="20210925061611723" title="$:/GitHub/Username">
+<pre>jackkytan</pre>
 </div>
 <div bag="default" revision="0" title="$:/isEncrypted">
 <pre>no</pre>
@@ -12687,6 +12710,15 @@ exports.context = contextWidget;
 <div bag="default" created="20200414222832782" modified="20210925041657149" revision="0" title="$:/SiteTitle" type="text/vnd.tiddlywiki">
 <pre>Jack Ky Tan</pre>
 </div>
+<div created="20210925060522447" modified="20210925060522447" title="$:/state/image-picker/system-369504366">
+<pre>show</pre>
+</div>
+<div created="20210925061535835" modified="20210925061538371" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
+</div>
+<div created="20210925061539666" modified="20210925061539666" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+</div>
 <div bag="default" revision="1" title="$:/status/IsAnonymous">
 <pre>yes</pre>
 </div>
@@ -12702,7 +12734,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Note 3]] [[Note 2]] [[Note 1]]" title="$:/StoryList">
+<div created="20210925060448367" list="Hello" modified="20210925061533283" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -12857,6 +12889,13 @@ Before you start storing important information in Stroll, it is vital to make su
 
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
+</div>
+<div created="20210925060408220" modified="20210925061442838" tags="" title="Hello">
+<pre>[img[https://previews.dropbox.com/p/thumb/ABQQt4_1UawBvZp4KM0ododkDbsqsEEexutHFozZnVglvKo9Rwcca7LMdlgHkGVlu1J5GTffxR-tWzxB8z_FgZeC4IQhMp4W6Fty2t9CJQg59vnOL0s6bYEuZLNqiwwcQvabLJAp97agYAZAdZSUg87I_bVcIzxM7he1bPB9GSXGuHY6F4dxCt7LighMpDr3HjNvkgMCl3T-LB04VoB4I126Ww211k6spHbLal1s-CwSmRgjHSBIE_Y61YMKAVKo308NmAJQbFA8Haysb3orXn3Xfo0WZC3rpgG8-I7g_G3CHa_B83RHHpCRrTpyZ266dY1gMcKd_EAs3IudHo9Hb6NkzAX4Ggb_i7SqaPf77Vl1hw/p.jpeg]]
+
+This is not a proper website. It is more an online studio where some work or archives are 'open studio ready', but most thoughts are in progress. Mainly it is a 'digital gardening' site where I plant things, grow ideas, think through projects, collect bits of research, put stuff away, bring it out again, and put it back again. It is a cabinet of my curiosities, beliefs and disbeliefs. So everything here is contingent, because artistic practice is contingent ... contingent on site, sight and hindsight. 
+
+Ultimately, while this space is a little bit for you, it is mostly for me. So you are welcome to look around. But if it gets more confusing and messy the deeper you go, remember that this is not a proper website.</pre>
 </div>
 <div created="20200808143152856" modified="20200808143154518" tags="" title="New Tiddler">
 <pre></pre>
