Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -12734,7 +12734,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210925060448367" list="Hello" modified="20210925061533283" title="$:/StoryList">
+<div list="Hello" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -12890,8 +12890,8 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925060408220" modified="20210925061442838" tags="" title="Hello">
-<pre>[img[https://previews.dropbox.com/p/thumb/ABQQt4_1UawBvZp4KM0ododkDbsqsEEexutHFozZnVglvKo9Rwcca7LMdlgHkGVlu1J5GTffxR-tWzxB8z_FgZeC4IQhMp4W6Fty2t9CJQg59vnOL0s6bYEuZLNqiwwcQvabLJAp97agYAZAdZSUg87I_bVcIzxM7he1bPB9GSXGuHY6F4dxCt7LighMpDr3HjNvkgMCl3T-LB04VoB4I126Ww211k6spHbLal1s-CwSmRgjHSBIE_Y61YMKAVKo308NmAJQbFA8Haysb3orXn3Xfo0WZC3rpgG8-I7g_G3CHa_B83RHHpCRrTpyZ266dY1gMcKd_EAs3IudHo9Hb6NkzAX4Ggb_i7SqaPf77Vl1hw/p.jpeg]]
+<div created="20210925060408220" modified="20210925061749940" tags="" title="Hello">
+<pre>[img width=300 [https://previews.dropbox.com/p/thumb/ABQQt4_1UawBvZp4KM0ododkDbsqsEEexutHFozZnVglvKo9Rwcca7LMdlgHkGVlu1J5GTffxR-tWzxB8z_FgZeC4IQhMp4W6Fty2t9CJQg59vnOL0s6bYEuZLNqiwwcQvabLJAp97agYAZAdZSUg87I_bVcIzxM7he1bPB9GSXGuHY6F4dxCt7LighMpDr3HjNvkgMCl3T-LB04VoB4I126Ww211k6spHbLal1s-CwSmRgjHSBIE_Y61YMKAVKo308NmAJQbFA8Haysb3orXn3Xfo0WZC3rpgG8-I7g_G3CHa_B83RHHpCRrTpyZ266dY1gMcKd_EAs3IudHo9Hb6NkzAX4Ggb_i7SqaPf77Vl1hw/p.jpeg]]
 
 This is not a proper website. It is more an online studio where some work or archives are 'open studio ready', but most thoughts are in progress. Mainly it is a 'digital gardening' site where I plant things, grow ideas, think through projects, collect bits of research, put stuff away, bring it out again, and put it back again. It is a cabinet of my curiosities, beliefs and disbeliefs. So everything here is contingent, because artistic practice is contingent ... contingent on site, sight and hindsight. 
 
