--- a/index.html
+++ b/index.html
@@ -12890,10 +12890,10 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925060408220" modified="20210925062312595" tags="" title="Hello">
+<div created="20210925060408220" modified="20210925062405449" tags="" title="Hello">
 <pre>[img width=300 [https://previews.dropbox.com/p/thumb/ABQH7ae8OaFSZnU8aryzNSucxci1QyqDMPEXzQv8XXKTxe8f8tj6MKIcvadHG-xAcmlu-P56h5RNoqEk8NM-49YBMZkmUXZ4IS3ykctHRlB8Sk2kkERA7KdBGCUNanXbt7a-qJXip1q4KuwQEt_TfpBZUfQreB2tZZ3_blQvwMjrKFvJgdALSd7NBneRlH7HN3r4hzYhK8-zvLa8LoUsDOM8zNTROzh6FPTqZEMb-25CqFOXcoNOGhinWTB1FDBH6xHx6Ryx6kd6W8s4DN4ENhBr1vYlQSu6UwCcj4IhV99v25ZOhKZrtX_yWb7UEqvOFXd2OcbEmkIZvquHKKMGg0f5byw4Ny4O9QTIbtdC4bf28w/p.jpeg]]
 
-This is not a proper website. It is more an online studio where some work or archives are 'open studio ready', but most thoughts are in progress. Mainly it is a 'digital gardening' site where I plant things, grow ideas, think through projects, collect bits of research, put stuff away, bring it out again, and put it back again. It is a cabinet of my curiosities, beliefs and disbeliefs. So everything here is contingent, because artistic practice is contingent ... contingent on site, sight and hindsight. 
+Welcome. This is not a proper website. It is more an online studio where some work or archives are 'open studio ready', but most thoughts are in progress. Mainly it is a 'digital gardening' site where I plant things, grow ideas, think through projects, collect bits of research, put stuff away, bring it out again, and put it back again. It is a cabinet of my curiosities, beliefs and disbeliefs. So everything here is contingent, because artistic practice is contingent ... contingent on site, sight and hindsight. 
 
 Ultimately, while this space is a little bit for you, it is mostly for me. So you are welcome to look around. But if it gets more confusing and messy the deeper you go, remember that this is not a proper website.</pre>
 </div>
