Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>Jack Ky Tan — Welcome to my digital studio where you can read about past and ongoing projects and ideas as they develop.</title>
+<title>Jack Ky Tan — Welcome to my digital open studio where you can read about past and ongoing projects and ideas as they develop.</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -298,6 +298,8 @@ Error message and password prompt
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -12704,8 +12706,8 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200423122624925" modified="20210925041928126" title="$:/SiteSubtitle">
-<pre>Welcome to my digital studio where you can read about past and ongoing projects and ideas as they develop.</pre>
+<div created="20200423122624925" modified="20210925063007038" title="$:/SiteSubtitle">
+<pre>Welcome to my digital open studio where you can read about past and ongoing projects and ideas as they develop.</pre>
 </div>
 <div bag="default" created="20200414222832782" modified="20210925041657149" revision="0" title="$:/SiteTitle" type="text/vnd.tiddlywiki">
 <pre>Jack Ky Tan</pre>
@@ -12713,11 +12715,14 @@ exports.context = contextWidget;
 <div created="20210925060522447" modified="20210925060522447" title="$:/state/image-picker/system-369504366">
 <pre>show</pre>
 </div>
-<div created="20210925061535835" modified="20210925061538371" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210925061535835" modified="20210925063002526" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210925061539666" modified="20210925061539666" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+</div>
+<div created="20210925062958213" modified="20210925063703435" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div bag="default" revision="1" title="$:/status/IsAnonymous">
 <pre>yes</pre>
@@ -12734,7 +12739,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Hello" title="$:/StoryList">
+<div created="20210925063000270" list="Hello" modified="20210925063000270" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -12890,12 +12895,16 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925060408220" modified="20210925062405449" tags="" title="Hello">
+<div created="20210925060408220" modified="20210925063810131" tags="" title="Hello">
 <pre>[img width=300 [https://previews.dropbox.com/p/thumb/ABQH7ae8OaFSZnU8aryzNSucxci1QyqDMPEXzQv8XXKTxe8f8tj6MKIcvadHG-xAcmlu-P56h5RNoqEk8NM-49YBMZkmUXZ4IS3ykctHRlB8Sk2kkERA7KdBGCUNanXbt7a-qJXip1q4KuwQEt_TfpBZUfQreB2tZZ3_blQvwMjrKFvJgdALSd7NBneRlH7HN3r4hzYhK8-zvLa8LoUsDOM8zNTROzh6FPTqZEMb-25CqFOXcoNOGhinWTB1FDBH6xHx6Ryx6kd6W8s4DN4ENhBr1vYlQSu6UwCcj4IhV99v25ZOhKZrtX_yWb7UEqvOFXd2OcbEmkIZvquHKKMGg0f5byw4Ny4O9QTIbtdC4bf28w/p.jpeg]]
 
-Welcome. This is not a proper website. It is more an online studio where some work or archives are 'open studio ready', but most thoughts are in progress. Mainly it is a 'digital gardening' site where I plant things, grow ideas, think through projects, collect bits of research, put stuff away, bring it out again, and put it back again. It is a cabinet of my curiosities, beliefs and disbeliefs. So everything here is contingent, because artistic practice is contingent ... contingent on site, sight and hindsight. 
+Welcome to my digital open studio space. This is not a proper website. So you won't find a brochure of work. Instead, you will find an archive of past and ongoing works in development. 
 
-Ultimately, while this space is a little bit for you, it is mostly for me. So you are welcome to look around. But if it gets more confusing and messy the deeper you go, remember that this is not a proper website.</pre>
+Mainly this is a 'digital gardening' site where I plant things, grow ideas, think through projects, collect bits of research, put stuff away, bring it out again, and put it back again. It is a cabinet of my curiosities, beliefs and disbeliefs. So everything here is contingent, because artistic practice is contingent ... on site, sight and hindsight. 
+
+The space is a TiddlyWiki which is a non-linear and non-hierarchical website made up of 'tiddlers', which are bits of content.  You are reading a tiddler right now. Tiddlers you choose to open appear in this main column. 
+
+You are most welcome to look around. Bear in mind that it will get messier the deeper you go. </pre>
 </div>
 <div created="20200808143152856" modified="20200808143154518" tags="" title="New Tiddler">
 <pre></pre>
