Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -12721,7 +12721,7 @@ exports.context = contextWidget;
 <div created="20210925061539666" modified="20210925061539666" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210925062958213" modified="20210925063703435" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20210925063941266" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div bag="default" revision="1" title="$:/status/IsAnonymous">
@@ -12895,14 +12895,14 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925060408220" modified="20210925063810131" tags="" title="Hello">
+<div created="20210925060408220" modified="20210925064130068" tags="" title="Hello">
 <pre>[img width=300 [https://previews.dropbox.com/p/thumb/ABQH7ae8OaFSZnU8aryzNSucxci1QyqDMPEXzQv8XXKTxe8f8tj6MKIcvadHG-xAcmlu-P56h5RNoqEk8NM-49YBMZkmUXZ4IS3ykctHRlB8Sk2kkERA7KdBGCUNanXbt7a-qJXip1q4KuwQEt_TfpBZUfQreB2tZZ3_blQvwMjrKFvJgdALSd7NBneRlH7HN3r4hzYhK8-zvLa8LoUsDOM8zNTROzh6FPTqZEMb-25CqFOXcoNOGhinWTB1FDBH6xHx6Ryx6kd6W8s4DN4ENhBr1vYlQSu6UwCcj4IhV99v25ZOhKZrtX_yWb7UEqvOFXd2OcbEmkIZvquHKKMGg0f5byw4Ny4O9QTIbtdC4bf28w/p.jpeg]]
 
 Welcome to my digital open studio space. This is not a proper website. So you won't find a brochure of work. Instead, you will find an archive of past and ongoing works in development. 
 
 Mainly this is a 'digital gardening' site where I plant things, grow ideas, think through projects, collect bits of research, put stuff away, bring it out again, and put it back again. It is a cabinet of my curiosities, beliefs and disbeliefs. So everything here is contingent, because artistic practice is contingent ... on site, sight and hindsight. 
 
-The space is a TiddlyWiki which is a non-linear and non-hierarchical website made up of 'tiddlers', which are bits of content.  You are reading a tiddler right now. Tiddlers you choose to open appear in this main column. 
+The space is a TiddlyWiki which is a non-linear and non-hierarchical website made up of 'tiddlers', which are bits of content.  You are reading a tiddler right now. Tiddlers you choose to open appear in this main column. These open or live tiddlers are listed in the side column (or top column if you are using a mobile phone) for ease of reference.  
 
 You are most welcome to look around. Bear in mind that it will get messier the deeper you go. </pre>
 </div>
