--- a/index.html
+++ b/index.html
@@ -12715,8 +12715,8 @@ exports.context = contextWidget;
 <div created="20210925060522447" modified="20210925060522447" title="$:/state/image-picker/system-369504366">
 <pre>show</pre>
 </div>
-<div created="20210925061535835" modified="20210925063002526" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20210925061535835" modified="20210925065735809" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20210925061539666" modified="20210925061539666" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12739,7 +12739,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210925063000270" list="Hello" modified="20210925063000270" title="$:/StoryList">
+<div created="20210925065715866" list="Hello" modified="20210925065715866" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -12895,7 +12895,7 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925060408220" modified="20210925064130068" tags="" title="Hello">
+<div created="20210925060408220" modified="20210925065701146" tags="" title="Hello">
 <pre>[img width=300 [https://previews.dropbox.com/p/thumb/ABQH7ae8OaFSZnU8aryzNSucxci1QyqDMPEXzQv8XXKTxe8f8tj6MKIcvadHG-xAcmlu-P56h5RNoqEk8NM-49YBMZkmUXZ4IS3ykctHRlB8Sk2kkERA7KdBGCUNanXbt7a-qJXip1q4KuwQEt_TfpBZUfQreB2tZZ3_blQvwMjrKFvJgdALSd7NBneRlH7HN3r4hzYhK8-zvLa8LoUsDOM8zNTROzh6FPTqZEMb-25CqFOXcoNOGhinWTB1FDBH6xHx6Ryx6kd6W8s4DN4ENhBr1vYlQSu6UwCcj4IhV99v25ZOhKZrtX_yWb7UEqvOFXd2OcbEmkIZvquHKKMGg0f5byw4Ny4O9QTIbtdC4bf28w/p.jpeg]]
 
 Welcome to my digital open studio space. This is not a proper website. So you won't find a brochure of work. Instead, you will find an archive of past and ongoing works in development. 
@@ -12904,7 +12904,7 @@ Mainly this is a 'digital gardening' site where I plant things, grow ideas, thin
 
 The space is a TiddlyWiki which is a non-linear and non-hierarchical website made up of 'tiddlers', which are bits of content.  You are reading a tiddler right now. Tiddlers you choose to open appear in this main column. These open or live tiddlers are listed in the side column (or top column if you are using a mobile phone) for ease of reference.  
 
-You are most welcome to look around. Bear in mind that it will get messier the deeper you go. </pre>
+You are most welcome to look around. Bear in mind that it will get messier the deeper you go. adsfsa</pre>
 </div>
 <div created="20200808143152856" modified="20200808143154518" tags="" title="New Tiddler">
 <pre></pre>
