--- a/index.html
+++ b/index.html
@@ -12809,8 +12809,8 @@ exports.context = contextWidget;
 <div created="20210925061539666" modified="20210925061539666" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210925062958213" modified="20210925130557340" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20210925062958213" modified="20210925130905438" title="$:/state/tab/sidebar--595412856">
+<pre>TableOfContents</pre>
 </div>
 <div created="20210925122403466" modified="20210925122407809" title="$:/state/toc/TableOfContents-Concepts--118161433">
 <pre>close</pre>
@@ -12818,11 +12818,11 @@ exports.context = contextWidget;
 <div created="20210925104810836" modified="20210925124737110" title="$:/state/toc/TableOfContents-Selected Works--118161433">
 <pre>close</pre>
 </div>
-<div created="20210925130341602" modified="20210925130341602" title="$:/state/toc/TableOfContents-Social Practice--118161433">
-<pre>open</pre>
+<div created="20210925130341602" modified="20210925130907510" title="$:/state/toc/TableOfContents-Social Practice--118161433">
+<pre>close</pre>
 </div>
-<div created="20210925123830757" modified="20210925124054862" title="$:/state/toc/TableOfContents-Talks--118161433">
-<pre>open</pre>
+<div created="20210925123830757" modified="20210925130908478" title="$:/state/toc/TableOfContents-Talks--118161433">
+<pre>close</pre>
 </div>
 <div created="20210925122405914" modified="20210925122406913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
