--- a/index.html
+++ b/index.html
@@ -309,6 +309,10 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents-Concepts--118161433</li>
 
+<li>$:/state/toc/TableOfContents-Installation Art--118161433</li>
+
+<li>$:/state/toc/TableOfContents-Performance Art--118161433</li>
+
 <li>$:/state/toc/TableOfContents-Selected Works--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Social Practice--118161433</li>
@@ -12812,8 +12816,14 @@ exports.context = contextWidget;
 <div created="20210925062958213" modified="20210925130905438" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
-<div created="20210925122403466" modified="20210925122407809" title="$:/state/toc/TableOfContents-Concepts--118161433">
+<div created="20210925122403466" modified="20210925131219970" title="$:/state/toc/TableOfContents-Concepts--118161433">
+<pre>open</pre>
+</div>
+<div created="20210925131345695" modified="20210925131421527" title="$:/state/toc/TableOfContents-Installation Art--118161433">
 <pre>close</pre>
+</div>
+<div created="20210925131353072" modified="20210925131353072" title="$:/state/toc/TableOfContents-Performance Art--118161433">
+<pre>open</pre>
 </div>
 <div created="20210925104810836" modified="20210925124737110" title="$:/state/toc/TableOfContents-Selected Works--118161433">
 <pre>close</pre>
@@ -12824,8 +12834,8 @@ exports.context = contextWidget;
 <div created="20210925123830757" modified="20210925130908478" title="$:/state/toc/TableOfContents-Talks--118161433">
 <pre>close</pre>
 </div>
-<div created="20210925122405914" modified="20210925122406913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
-<pre>close</pre>
+<div created="20210925122405914" modified="20210925131220962" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
+<pre>open</pre>
 </div>
 <div created="20210925130420135" modified="20210925130438559" title="$:/state/toc/TableOfContents/Social Practice-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
@@ -12845,7 +12855,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210925124739175" list="Notice Hello" modified="20210925130602413" title="$:/StoryList">
+<div created="20210925131225763" list="Notice Hello" modified="20210925132011393" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13298,8 +13308,14 @@ To celebrate the close of our 40th year at Scottish Sculpture Workshop, we have 
 
 [[Download a copy of the text here|https://www.dropbox.com/s/d1ul1cmt496dq0j/Kitchen-Gods-and-Kiln-Gods_web.pdf?dl=0]]</pre>
 </div>
-<div created="20210925122257314" modified="20210925122259020" tags="Concepts" title="New Materialism">
-<pre></pre>
+<div created="20210925122257314" modified="20210925132021011" tags="Concepts" title="New Materialism">
+<pre>Watch this space for more information about New Materialism and how this informs my practice.
+
+Some of my projects that use New Materialist approaches are [[Voices From The Courts]], [[Devising Governance]] and my [[FACT Board Artist-in-Residence]].
+
+Some of my writing that elaborate New Materialist frameworks in my thinking include my ~PhD thesis [[Law's Imagination: towards and understanding of legal aesthetics through performative practice]] and [[Disposing Forests: a walk through the policyscape of a Scottish forest]].
+
+An overview of New Materialism as a theory can be found [[here|https://www.oxfordbibliographies.com/view/document/obo-9780190221911/obo-9780190221911-0016.xml]]</pre>
 </div>
 <div created="20200808143152856" modified="20200808143154518" tags="" title="New Tiddler">
 <pre></pre>
