--- a/index.html
+++ b/index.html
@@ -12948,7 +12948,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210926054553074" list="" modified="20210926081122845" title="$:/StoryList">
+<div created="20210926082124733" list="Notice Hello" modified="20210926082124733" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13667,7 +13667,7 @@ The idea of chance not only alludes to John Cage and his idea that ‘everything
 <div created="20210925123823669" modified="20210925123824704" tags="TableOfContents" title="Talks">
 <pre></pre>
 </div>
-<div created="20210925112535460" modified="20210925113119652" tags="[[Selected Works]]" title="This Has Nothing To Do With Politics">
+<div created="20210925112535460" modified="20210926082129448" tags="[[Selected Works]] Curating" title="This Has Nothing To Do With Politics">
 <pre>[img[https://previews.dropbox.com/p/thumb/ABS2YVQ6Ro4rYVEDpHpWg7TIGGAkBWqQyRTVJ2vmwK7_z3d-r3cOpE4dYq6t_0Qo-XDhqFaW_yFfkmbHvmUoBkf5ohWqOuJGR_-pA7mlKUHto8_tVKjeOFUUvSIWiV5WU319yvV9eTzaeLwn6nifOB0VShxQGljDGOSUH21zOkn0yNL9sAu5kds14hfT9P73Vim7xOffwR7bnPzfIDC67aowu954--CTLQgO1lNRjTZiXWnhDh0x-mi8nw6KxPZLUKvonI-VvtcjSWNrcGDGmzFvGE9SXLnndCNllqVRD_z46ubNQmW9OnFDw5nlJdWDT0iSDgdMhS7aFiPJerJ8ZpsNG5V6x1F_2kmKB3AxGF-9RQ/p.jpeg?fv_content=true&amp;size_mode=5]]
 
 “//… we have today a new cultural task: to live the inevitable with a relaxed soul. To call forth a big wave of withdrawal, of massive dissociation, of desertion from the scene of the economy, of non-participation in the fake show of politics … We are not going to witness a cathartic event of revolution, won’t see the sudden breakdown of state power. In the coming years, we’ll witness a sort of revolution without a subject.//”
