--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents-Concepts--118161433</li>
 
+<li>$:/state/toc/TableOfContents-Curating--118161433</li>
+
 <li>$:/state/toc/TableOfContents-Current Projects--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Installation Art--118161433</li>
@@ -398,6 +400,8 @@ Error message and password prompt
 <li>Concepts</li>
 
 <li>Contact</li>
+
+<li>Curating</li>
 
 <li>Current Projects</li>
 
@@ -12894,13 +12898,16 @@ exports.context = contextWidget;
 <div created="20210925122403466" modified="20210926081135781" title="$:/state/toc/TableOfContents-Concepts--118161433">
 <pre>close</pre>
 </div>
+<div created="20210926083300728" modified="20210926083301440" title="$:/state/toc/TableOfContents-Curating--118161433">
+<pre>close</pre>
+</div>
 <div created="20210926064611805" modified="20210926081142829" title="$:/state/toc/TableOfContents-Current Projects--118161433">
 <pre>close</pre>
 </div>
 <div created="20210925131345695" modified="20210926081144669" title="$:/state/toc/TableOfContents-Installation Art--118161433">
 <pre>close</pre>
 </div>
-<div created="20210926064608845" modified="20210926081146437" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
+<div created="20210926064608845" modified="20210926083237970" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
 <pre>close</pre>
 </div>
 <div created="20210925131353072" modified="20210926081148836" title="$:/state/toc/TableOfContents-Performance Art--118161433">
@@ -12912,7 +12919,7 @@ exports.context = contextWidget;
 <div created="20210926053815363" modified="20210926053816260" title="$:/state/toc/TableOfContents-Sculpture--118161433">
 <pre>close</pre>
 </div>
-<div created="20210925104810836" modified="20210926053812468" title="$:/state/toc/TableOfContents-Selected Works--118161433">
+<div created="20210925104810836" modified="20210926083306433" title="$:/state/toc/TableOfContents-Selected Works--118161433">
 <pre>close</pre>
 </div>
 <div created="20210925130341602" modified="20210926064947026" title="$:/state/toc/TableOfContents-Social Practice--118161433">
@@ -12948,7 +12955,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210926082124733" list="Notice Hello" modified="20210926082124733" title="$:/StoryList">
+<div created="20210926083244371" list="Notice Hello" modified="20210926083247955" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13190,6 +13197,9 @@ Work displayed in London can be viewed by appointment at the Department for Heal
 🙈 follow me on [[facebook|https://www.facebook.com/jackkytan]] for announcements and general opinion on art and politics.
 
 🙉 follow me on [[twitter|https://twitter.com/jackkytan]] for tweets about art and law, and my academic work.</pre>
+</div>
+<div created="20210926083255345" modified="20210926083256650" tags="TableOfContents" title="Curating">
+<pre></pre>
 </div>
 <div created="20210926060749489" modified="20210926060750475" tags="TableOfContents" title="Current Projects">
 <pre></pre>
